Added button to CreateTheme

--- a/app/src/main/res/layout/activity_create_theme.xml
+++ b/app/src/main/res/layout/activity_create_theme.xml
@@ -304,7 +304,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="75dp"
             android:layout_marginTop="65dp"
-            android:backgroundTint="@color/light_outline"
+            android:backgroundTint="?attr/colorOutlineVariant"
             android:stateListAnimator="@null"
             android:text="CANCEL"
             app:cornerRadius="7dp"
@@ -317,7 +317,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="65dp"
             android:layout_marginEnd="75dp"
-            android:backgroundTint="@color/light_accent"
+            android:backgroundTint="?attr/colorPrimary"
             android:stateListAnimator="@null"
             android:text="SAVE"
             app:cornerRadius="7dp"
