--- a/app/src/main/res/layout/activity_themes.xml
+++ b/app/src/main/res/layout/activity_themes.xml
@@ -7,13 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".ThemesActivity">
 
+    <Button
+        android:id="@+id/createThemeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="150dp"
+        android:gravity="center_horizontal"
+        android:text="CREATE THEME"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="?attr/colorPrimary"
+        app:cornerRadius="7dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvThemeList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/createThemeBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
