--- a/app/src/main/res/layout/activity_month.xml
+++ b/app/src/main/res/layout/activity_month.xml
@@ -26,8 +26,9 @@
             android:onClick="previousMonthAction"
             android:text="PREV"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="7dp"/>
 
         <TextView
             android:id="@+id/monthYearTV"
@@ -47,10 +48,11 @@
             android:background="@null"
             android:backgroundTint="?attr/colorPrimary"
             android:onClick="nextMonthAction"
-            android:text="next"
+            android:text="NEXT"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="7dp"/>
 
     </LinearLayout>
 
